release/src/router/dbus-1.8.8/test/data/invalid-messages/bad-header-field-alignment.message
## last field incorrectly aligned to 4 bytes

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

HEADER_FIELD INTERFACE
TYPE STRING
STRING 'org.freedesktop.Foo'

HEADER_FIELD MEMBER
TYPE STRING
STRING 'Bar'

HEADER_FIELD PATH
TYPE OBJECT_PATH
OBJECT_PATH '/foo'

HEADER_FIELD UNKNOWN
TYPE STRING
STRING 'a'

ALIGN 4

HEADER_FIELD UNKNOWN
TYPE ARRAY
TYPE BYTE
ALIGN 4
LENGTH ThisByteArray
START_LENGTH ThisByteArray
BYTE 1
BYTE 2
END_LENGTH ThisByteArray


ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
